fix loader overflow and always loading

--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -6,6 +6,7 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 
     font-family: "Mona Sans";
     text-transform: uppercase;
